// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AudioDramaToggle /> Expect to match snapshot for drama audio 1`] = `
<div
  className="audio-drama-toggle-container"
>
  <button
    className="audio-drama-toggle-button active"
    id="drama-button"
    onClick={[Function]}
    title="Drama"
    type="button"
    value="audio_drama"
  >
    Drama
  </button>
  <button
    className="audio-drama-toggle-button"
    id="non-drama-button"
    onClick={[Function]}
    title="Non-Drama"
    type="button"
    value="audio"
  >
    Non-Drama
  </button>
</div>
`;

exports[`<AudioDramaToggle /> Expect to match snapshot for only drama audio available 1`] = `
<div
  className="audio-drama-toggle-container"
>
  <button
    className="audio-drama-toggle-button active"
    id="drama-button"
    onClick={[Function]}
    title="Drama"
    type="button"
    value="audio_drama"
  >
    Drama
  </button>
  <button
    className="audio-drama-toggle-button disabled"
    id="non-drama-button"
    onClick={[Function]}
    title="Non-Drama"
    type="button"
    value="audio"
  >
    Non-Drama
  </button>
</div>
`;

exports[`<AudioDramaToggle /> Expect to match snapshot for only plain audio available 1`] = `
<div
  className="audio-drama-toggle-container"
>
  <button
    className="audio-drama-toggle-button active disabled"
    id="drama-button"
    onClick={[Function]}
    title="Drama"
    type="button"
    value="audio_drama"
  >
    Drama
  </button>
  <button
    className="audio-drama-toggle-button"
    id="non-drama-button"
    onClick={[Function]}
    title="Non-Drama"
    type="button"
    value="audio"
  >
    Non-Drama
  </button>
</div>
`;

exports[`<AudioDramaToggle /> Expect to match snapshot for plain audio 1`] = `
<div
  className="audio-drama-toggle-container"
>
  <button
    className="audio-drama-toggle-button"
    id="drama-button"
    onClick={[Function]}
    title="Drama"
    type="button"
    value="audio_drama"
  >
    Drama
  </button>
  <button
    className="audio-drama-toggle-button active"
    id="non-drama-button"
    onClick={[Function]}
    title="Non-Drama"
    type="button"
    value="audio"
  >
    Non-Drama
  </button>
</div>
`;
